gccida/g3/distribute_links
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13115:7: error: conflicting types for 'distribute_links'
void  distribute_links( __int64 a1) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:404:13: note: previous declaration is here
static void distribute_links    PARAMS ((rtx));
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13128:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13128:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13147:12: error: invalid operands to binary expression ('struct rtx_def *' and 'uint64 *' (aka 'unsigned long long *'))
v2 = ( rtx)*( ( _QWORD *)v4 + 4); 
     ~~~~~~^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13150:26: error: expected ')'
v2 = single_set_2( ( rtx)v4, v2); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13150:18: note: to match this '('
v2 = single_set_2( ( rtx)v4, v2); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13187:46: error: expected expression
if ( reg_overlap_mentioned_p( rtx, *( ( rtx *)v8 + 4)) ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13190:40: error: expected expression
if ( !reg_referenced_p( rtx, *( ( rtx *)v8 + 4)) ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13206:1: error: use of undeclared identifier 'v12'
v12 = added_links_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13209:6: error: use of undeclared identifier 'v12'
if ( v12 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13211:11: error: use of undeclared identifier 'v12'; did you mean 'v2'?
for ( i = v12->fld[0].rtint; max_uid_cuid < ( int)i; i = v12->fld[0].rtint ) 
          ^~~
          v2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13118:5: note: 'v2' declared here
rtx v2; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13211:58: error: use of undeclared identifier 'v12'; did you mean 'v2'?
for ( i = v12->fld[0].rtint; max_uid_cuid < ( int)i; i = v12->fld[0].rtint ) 
                                                         ^~~
                                                         v2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13118:5: note: 'v2' declared here
rtx v2; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13213:17: error: use of undeclared identifier 'v12'
if ( *( _WORD *)v12 != 32 || **( _WORD **)&v12[2] != 48 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13213:44: error: use of undeclared identifier 'v12'; did you mean 'v2'?
if ( *( _WORD *)v12 != 32 || **( _WORD **)&v12[2] != 48 ) 
                                           ^~~
                                           v2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13118:5: note: 'v2' declared here
rtx v2; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13216:1: error: use of undeclared identifier 'v12'
v12 = v12[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13216:7: error: use of undeclared identifier 'v12'; did you mean 'v2'?
v12 = v12[1].fld[0].rtx; 
      ^~~
      v2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13118:5: note: 'v2' declared here
rtx v2; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13217:7: error: use of undeclared identifier 'v12'
if ( !v12 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13244:26: error: expected ';' after expression
added_links_insn = ( rtx)v8; 
                         ^
                         ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13260:29: error: expected ')'
if ( find_reg_fusage( ( rtx)v8, USE, rtx) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/combine.c:13260:21: note: to match this '('
if ( find_reg_fusage( ( rtx)v8, USE, rtx) ) 
                    ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/distribute_links/src/obj/combine.o] Error 1
